--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+    font-size: 10px;
+}
+
 body {
     font-family: 'Press Start 2P', cursive;
 }
